# actor-polymorphism

./: .gitignore  Cargo.toml  README.md
bitcoin-trading/src/: bbo_handler.rs  bitflyer.rs  collector.rs  lib.rs  strategy.rs
polymorphic/: Cargo.toml
polymorphic/src/: main.rs
src/: non_polymorphic.rs  websocket.rs
