[package]
name = "actor-polymorphism"
version = "0.1.0"
authors = ["Kazuki Yoshida <idkphys.030zzz@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
awc = { version = "1.0.0", features = [ "rustls" ] }
rustls = "0.16"
webpki-roots = "0.20"
futures = "0.3.1"
actix-codec = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "data_collection"
path = "src/bin/data_collection.rs"

[[bin]]
name = "auto_trading"
path = "src/bin/auto_trading.rs"
